--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,5 @@
 {{upperlength}}<br>
  <textarea [(ngModel)]="inputarea" placeholder="type here"rows="20"cols="90"(input)="input()" >
  </textarea><br>
+ <div *ngIf="tooLongBoolean">1文当たりの文字数が多すぎます。</div>
 
-<!--ここに、ngForで入力された文章と指摘事項を書き出す。-->
- 
