指示語に関する注意喚起を実装。

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,22 @@
 p {
   font-family: Lato;
+
+}
+.box {
+    padding: 0.5em 1em;
+    margin: 2em 0;
+    color: #ff7d6e;
+    background: #ffebe9;
+    border-top: solid 10px #ff7d6e;
+}
+.box p {
+    margin: 0; 
+    padding: 0;
+}
+.bluebox {
+    padding: 0.5em 1em;
+    margin: 2em 0;
+    color: #0000ff;
+    background: #ffebdd;
+    border-top: solid 10px #000aff;
 }
