--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 これは文章の上達を支援するツールです(作成中）<br>
 一文あたりの文字数が設定した文字数をオーバーすると警告をだします。<br>
-こんご、語尾の乱れや指示語などを検知して指摘を行う機能をつけようと思っています。<br>
+<br>
 1文当たりの文字数上限<input type="range" [(ngModel)]="upperlength" min="0" max="30">
 {{upperlength}}<br>
  <textarea [(ngModel)]="inputarea" placeholder="type here"rows="20"cols="90"(input)="input()" >
  </textarea><br>
- <div *ngIf="tooLongBoolean">1文当たりの文字数が多すぎます。</div>
+ トータル文字数{{inputarea.length}}
+ <div class="box" *ngIf="tooLongBoolean">1文当たりの文字数が多すぎます。</div>
+ <div class="box" *ngIf="gobiBoolean">語尾が乱れています。</div>
+ <div class="bluebox" *ngIf="demoBoolean">指示語は明確ですか？</div>
 
