--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -20,3 +20,14 @@ p {
     background: #ffebdd;
     border-top: solid 10px #000aff;
 }
+.box14{
+    padding: 0.2em 0.5em;
+    margin: 2em 0;
+    background: #d6ebff;
+    box-shadow: 0px 0px 0px 10px #d6ebff;
+    border: dashed 2px white;
+}
+.box14 p {
+    margin: 0; 
+    padding: 0;
+}
