--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-これは文章の上達を支援するツールです(作成中）<br>
+これは文章の上達を支援するツールです(α版）<br>
 一文あたりの文字数が設定した文字数をオーバーすると警告をだします。<br>
 <br>
-目標とする文字数:<input type="number" [(ngModel)]="goal"><br>
-1文当たりの文字数上限<input type="range" [(ngModel)]="upperlength" min="0" max="30">
+目標とする文字数:<input type="range" [(ngModel)]="goal" min="100"max="10000">{{goal}}<br>
+1文当たりの文字数上限<input type="range" [(ngModel)]="upperlength" min="0" max="70">
 {{upperlength}}<br>
  <div class="box" *ngIf="tooLongBoolean">1文当たりの文字数が多すぎます。</div>
  <div class="box" *ngIf="gobiBoolean">語尾が乱れています。</div>
